# SI-Map-Merging

./: .gitignore  README.md  adj.mtx  archive_ouput.txt  archive_ouput2.txt  build_adjacency.py  evaluation.sh  evaluation2.sh  generate_adjacency.py  mult_robot_optimization.py  multi_agent_optimization.py  multi_robot_optimization.py  output.g2o  output.txt  output1.txt  output2.txt  processCity10000.py  test.sh
adaptive_voting/: adaptive_voting.py
build_adjacency/: README  README.md  build_adjacency.py  convert_to_multi.py
datasets/: README.md  city10000.g2o
find_max_clique/: .gitignore  find_max_clique.py
find_max_clique/fmc/: README
find_max_clique/fmc/src/: Makefile  findClique.h  findCliqueHeu.cpp  main_fmc.cpp
fmc/: README
fmc/src/: fmc  utils.cpp
gtsam_optimize/: CMakeLists.txt  README.md  optimization.py
gtsam_optimize/cpp/src/: OptimizeG2o.cpp
gtsam_optimize/python/: generate_adjacency.py
process_g2o/: README.md  build_adjacency.py  convert_to_multi.py  output.g2o  test.py  utils.py
scale_estimation/: Pose2SLAMExample.py  SIFactor.py  adaptive_voting.py  scale_estimate.py  test_SIFactor.py  test_between.py  test_compose.py  test_covariance.py  test_covariance3.py
scale_estimation/cpp/: CMakeLists.txt
scale_estimation/cpp/src/: LocalizationExample.cpp
